--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "server": "nodemon ./server ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/Icones-Plus/Vote-chain/issues"
   },
-  "homepage": "https://github.com/Icones-Plus/Vote-chain#readme"
+  "homepage": "https://github.com/Icones-Plus/Vote-chain#readme",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
+  }
 }
