--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/Icones-Plus/Vote-chain#readme",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.27"
+    "mongoose": "^5.9.27",
+    "telesignsdk": "^2.2.1"
   },
   "devDependencies": {
     "prettier": "^2.0.5"
