--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-toastify": "^6.0.8",
     "sweetalert2": "^9.17.1"
   },
   "scripts": {
