Face verfifcation api set

--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-webcam": "^5.2.0",
+    "request": "^2.88.2",
     "sweetalert2": "^9.17.1"
   },
   "scripts": {
