--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jwt-decode": "^2.2.0",
     "mongoose": "^5.9.27",
     "react-chartjs-2": "^2.10.0",
+    "react-webcam": "^5.2.0",
     "telesignsdk": "^2.2.1",
     "web3": "^1.2.11"
   },
