--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "client": "cd client && npm run build && npm start",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "ganache": "cd blockchian && node_modules/.bin/ganache-cli"
+    "ganache": "cd blockchian && node_modules/.bin/ganache-cli",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
     "jwt-decode": "^2.2.0",
     "mongoose": "^5.9.27",
     "mongoose-type-url": "^2.0.0",
+    "nodemon": "^2.0.4",
     "react-chartjs-2": "^2.10.0",
     "solc": "^0.6.4",
     "telesignsdk": "^2.2.1",
