--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-webcam": "^5.2.0",
+    "reactjs-popup": "^1.5.0",
     "request": "^2.88.2",
     "sweetalert2": "^9.17.1"
   },
