--- a/package.json
+++ b/package.json
@@ -32,16 +32,16 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
-    "ganache-cli": "^6.10.1",
+   
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "mongoose": "^5.9.27",
     "mongoose-type-url": "^2.0.0",
     "nodemon": "^2.0.4",
     "react-chartjs-2": "^2.10.0",
-    "solc": "^0.6.4",
-    "telesignsdk": "^2.2.1",
-    "web3": "^1.2.6"
+    
+    "telesignsdk": "^2.2.1"
+    
   },
   "devDependencies": {
     "prettier": "^2.0.5"
