--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": { 
-    "server": "nodemon ./server",
+    "start": "node server",
+    "server": "nodemon server",
     "client":"npm start --prefix client",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "ganache": "node_modules/.bin/ganache-cli"
