--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": { 
+  "scripts": {
     "start": "node server",
     "server": "nodemon server",
-    "client":"npm start --prefix client",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "ganache": "node_modules/.bin/ganache-cli"
   },
@@ -31,16 +33,16 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
-   
+    "ganache-cli": "^6.10.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "mongoose": "^5.9.27",
     "mongoose-type-url": "^2.0.0",
-    "nodemon": "^2.0.4",
     "react-chartjs-2": "^2.10.0",
-    
-    "telesignsdk": "^2.2.1"
-    
+    "react-webcam": "^5.2.0",
+    "solc": "^0.6.4",
+    "telesignsdk": "^2.2.1",
+    "web3": "^1.2.6"
   },
   "devDependencies": {
     "prettier": "^2.0.5"
