added sms npm package

--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,8 @@
     "reactjs-popup": "^1.5.0",
     "request": "^2.88.2",
     "sweetalert": "^2.1.2",
-    "sweetalert2": "^9.17.1"
+    "sweetalert2": "^9.17.1",
+    "telesignsdk": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
