fix the reslut page

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
-    "ganache": "node_modules/.bin/ganache-cli"
+    "ganache": "node_modules/.bin/ganache-cli",
+    "deploy": "node ./blockchian/deployer.js"
   },
   "repository": {
     "type": "git",
